--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,12 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   
+  <error-page>
+    <error-code>403</error-code>
+    <location>/403</location>
+</error-page>
+  
+  
   <listener> 
 	<listener-class> 
 		org.springframework.web.context.ContextLoaderListener 
