--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,19 @@
 </error-page>
   
   
+  <error-page>
+    <error-code>500</error-code>
+    <location>/500</location>
+</error-page>
+  
+  
+  
+  <error-page>
+    <error-code>404</error-code>
+    <location>/404</location>
+</error-page>
+  
+  
   <listener> 
 	<listener-class> 
 		org.springframework.web.context.ContextLoaderListener 
